# nn-cpp

./: CMakeLists.txt  Makefile  README.md
data/: download.sh
include/nn/: activation.hpp  layer.hpp  matrix.hpp  network.hpp  optimizer.hpp
src/: mnist.cpp  mnist_utils.cpp
tests/: CMakeLists.txt  activation_tests.cpp  layer_tests.cpp  matrix_tests.cpp  network_tests.cpp  optimizer_tests.cpp
